--- a/css/layout.css
+++ b/css/layout.css
@@ -313,12 +313,12 @@ a .user_pic:active{
 }
 article.center{
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 .parcel_stat .flex{
     box-shadow: 0 0 20px #999;
-    padding: 50px;
+    padding: 30px;
     border-radius: 50%;
     flex-direction: column;
     justify-content: center;
@@ -356,22 +356,22 @@ article.center{
     width: 90%;
     max-width: 708px;
     margin: 0 auto;
-    /* margin-bottom: -383px; */
+}
+.detail_in_detail, .ups{
+    transform: translateY(350px);
 }
 .detail_in_detail{
     width: 100%;
     border-radius: 15px 15px 0 0;
     background-color: #F9F9F9;
-    /* background-color: #999; */
-    height: 400px;
 }
 .dinfo{
     width: 100%;
     max-width: 500px;
     padding-top: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
     margin: 0 auto;
+    align-items: center;
+    padding-left: 15px;
     justify-content: center;
 }
 .dinfo h5{
@@ -380,7 +380,7 @@ article.center{
     left: 0;
     top: 0;
     width: calc(100%/2);
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 .blue{
     color: #2196F3;
@@ -393,7 +393,41 @@ article.center{
     margin-right: 5px;
     color: #999999;
 }
-
+.detail_cont{
+    position: relative;
+    padding-top: 50px;
+    background-color: #f9f9f9;
+    text-align: left;
+    height: 180px;
+    padding-bottom: 50px;
+}
+.process_com{
+    color: #999;
+}
+.process_bar{
+    width: 30%;
+    text-align: center;
+    flex-direction: column;
+    position: relative;
+}
+.process_bar img{
+    z-index: 100;
+}
+.process_bar::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-40%);
+    height: 500px;
+    background-color: #ddd;
+    width: 2px;
+}
+.process_info{
+    width: 70%;
+    text-align: left;
+    flex-direction: column;
+}
 /* keyframe ************************************************************************************/
 
 @-webkit-keyframes uparrows {
@@ -405,7 +439,7 @@ article.center{
     }
   }
 /* mediaquery **********************************************************************************/
-@media all and (max-width:472px) {
+@media all and (max-width:494px) {
     .small_parcel{
         display: block;
         width: calc((100% - 100px)/2);
@@ -413,6 +447,11 @@ article.center{
     }
     .small_parcel h3{
         line-height: 1.4285rem;
+    }
+    .detail_cont {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
 @media all and (max-width:329px){
