--- a/css/common.css
+++ b/css/common.css
@@ -217,3 +217,45 @@ footer div{
   margin-top: 80px;
   margin-bottom: 60px;
 }
+.actbtn{
+  position: relative;
+}
+.actbtn::before{
+  content: "";
+  border: 2px solid #ED7D31;
+  -webkit-transform-origin: 50% 48%;
+          transform-origin: 50% 48%;
+  -webkit-animation: drift 2000ms infinite linear;
+          animation: drift 2000ms infinite linear;
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+@-webkit-keyframes drift {
+  from {
+    -webkit-transform: rotate(0deg) scale(0,0);
+            transform: rotate(0deg) scale(0,0);
+            opacity: 1;
+  }
+  to {
+    -webkit-transform: rotate(360deg) scale(2,2);
+            transform: rotate(360deg) scale(2,2);
+            opacity: 0;
+  }
+}
+
+@keyframes drift {
+  from {
+    -webkit-transform: rotate(0deg) scale(0,0);
+            transform: rotate(0deg) scale(0,0);
+            opacity: 1;
+  }
+  to {
+    -webkit-transform: rotate(360deg) scale(2,2);
+            transform: rotate(360deg) scale(2,2);
+            opacity: 0;
+  }
+}
