--- a/css/common.css
+++ b/css/common.css
@@ -1,267 +1,198 @@
 @charset "utf-8";
-
-/*googleips 웹폰트 css 파일 불러오기*/
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Noto+Serif+KR:wght@200;300;400;500;600;700;900&display=swap');
-/* font-family: 'Noto Sans KR', sans-serif;
-font-family: 'Noto Serif KR', serif; */
-
-/* 저장된 글꼴 파일 선언*/
-@font-face { font-family : youth;    
-                src : url(../font/Youth.woff) format('woff');
-              font-weight: normal;}
-/* 웹사이트의 글꼴 파일 선언*/
-/* @font-face { font-family : font_gothic;    
-                src : url(http://uhbee.com/nanum.eot) ; }   */
-
-
-* {margin:0; padding:0;
-   font-size: inherit;
-   font-weight: inherit;color:inherit;
-  }
-html{font-size:14px; line-height:1.15em;}
-body{ word-break: break-all;
-      color:#333;
-      font-family: 'Noto Sans KR', sans-serif;
-      word-break: keep-all;
-    word-wrap: break-word;
-      /* font-family: 'Noto Serif KR', serif; 제목 */
-    }
-
-ul, ol, li{list-style-type:none}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+* {
+	margin:0;
+	padding:0;
+	font-size:inherit;
+	font-weight:inherit;
+	color:inherit;
+	box-sizing:border-box;
+}
+html {
+	font-size:16px;
+	line-height:1.15em;
+}
+body {
+	background-color:#fefefe;
+	color:#6f6f6f;
+	font-family:'Noto Sans KR',sans-serif;
+}
+h1,h2,h3,h4,h5,h6 {
+	color:#333;
+	font-family:'Roboto',sans-serif;
+}
+p {
+	font-weight:300;
+}
+ul,ol,li {
+	list-style-type:none
+}
 svg,img,embed,object,iframe,fieldset {
-  vertical-align: bottom;border:none;}
-hr {clear:both;border:none}
-a {color:inherit;text-decoration:none;background-color:transparent}
-b,strong {font-weight: bolder;}
-small {font-size: 80%;}
-sub,sup {font-size: 75%;line-height: 0;position: relative;vertical-align: baseline;}
-sub {bottom: -0.25em;}
-sup {  top: -0.5em;}
-table{border-collapse:collapse}
-caption {  text-align: left;}
-td,th { padding: 0;}
-th { text-align: center;  font-weight: bold; }
-
-button,input,optgroup,select,textarea {-webkit-appearance: none; /* 1 */
-  appearance: none;
-  vertical-align: middle;
-  color: inherit;
-  font: inherit;
-  background: transparent;
-  padding: 0;
-  margin: 0;
-  border-radius: 0;
-  text-align: inherit;
-  text-transform: inherit; /* 2 */
-  color:inherit;font-size:inherit;
-  font-family:inherit;
-  outline:0
+	vertical-align:bottom;
+	border:none;
+}
+hr {
+	clear:both;
+	border:none
+}
+a {
+	color:inherit;
+	text-decoration:none;
+	background-color:transparent
+}
+b,strong {
+	font-weight:bolder;
+}
+small {
+	font-size:80%;
+}
+sub,sup {
+	font-size:75%;
+	line-height:0;
+	position:relative;
+	vertical-align:baseline;
+}
+sub {
+	bottom:-0.25em;
+}
+sup {
+	top:-0.5em;
+}
+table {
+	border-collapse:collapse
+}
+caption {
+	text-align:left;
+}
+td,th {
+	vertical-align:top;
+	padding:0;
+}
+th {
+	text-align:left;
+	font-weight: bold;
+}
+button,input,optgroup,select,textarea {
+	-webkit-appearance:none;
+	/* 1 */
+	appearance:none;
+	vertical-align:middle;
+	color:inherit;
+	font:inherit;
+	background:transparent;
+	padding:0;
+	margin:0;
+	border-radius:0;
+	text-align:inherit;
+	text-transform:inherit;
+	/* 2 */
+	color:inherit;
+	font-size:inherit;
+	font-family:inherit;
+	outline:0
 }
 [type="checkbox"] {
-  -webkit-appearance: checkbox;
-  appearance: checkbox;
+	-webkit-appearance:checkbox;
+	appearance:checkbox;
 }
-
 [type="radio"] {
-  -webkit-appearance: radio;
-  appearance: radio;
+	-webkit-appearance:radio;
+	appearance: radio;
 }
 /*** Correct cursors for clickable elements. */
 button,[type="button"],[type="reset"],[type="submit"] {
-  cursor: pointer;
+	cursor:pointer;
 }
-
 button:disabled,[type="button"]:disabled,[type="reset"]:disabled,[type="submit"]:disabled {
-  cursor: default;
+	cursor:default;
 }
 select:disabled {
-  opacity: inherit;
+	opacity:inherit;
 }
 progress {
-  vertical-align: baseline;
+	vertical-align:baseline;
 }
 textarea {
-  overflow: auto;
+	overflow:auto;
 }
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
+[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button {
+	height:auto;
 }
 [type="search"] {
-  outline-offset: -2px; /* 1 */
+	outline-offset:-2px;
+	/* 1 */
 }
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
+	-webkit-appearance: none;
 }
 ::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
+	-webkit-appearance:button;
+	/* 1 */
+	font:inherit;
+	/* 2 */
 }
 label[for] {
-  cursor: pointer;
+	cursor:pointer;
 }
 details {
-  display: block;
+	display:block;
 }
 summary {
-  display: list-item;
+	display:list-item;
 }
-#wrap{ 
-  width: 100%;
-  max-width: 768px;
-  min-width: 320px;
-  margin: 0 auto;
+.red {
+	color:#e60000;
 }
-h1, h2, h3, h4, h6, h6{
-  font-family: 'youth', sans-serif;
+.none {
+	display:none;
 }
-h1{
-  font-size: 2.5714rem;
-  line-height: 2.5714rem;
+#wrap {
+	position:relative;
+	word-break:keep-all;
+	overflow:hidden;
+}
+.inner {
+	max-width:1440px;
+	margin:0 auto;
+	padding:0 50px;
+	box-sizing:border-box;
+	position:relative;
+}
+.flex {
+	display:flex;
+	flex-direction:row;
+	flex-wrap:wrap;
+	justify-content:space-between;
+}
+h1 {
+	font-size:1.75rem;
+	line-height:1.75rem;
+}
+h2 {
+	font-size:2.625rem;
+	line-height: 2.625rem;
+}
+/* 42px */
+h3 {
+	font-size:2.25rem;
+	line-height: 2.25rem;
 }
 /* 36px */
-h2{
-  font-size: 1.7142rem;
-  line-height: 1.7142rem;
+h4 {
+	font-size:1.5rem;
+	line-height: 1.5rem;
 }
 /* 24px */
-h3{
-  font-size: 1.4285rem;
-  line-height: 1.4285rem;
+h5 {
+	font-size:0.875rem;
+	line-height: 0.875rem;
 }
-/* 20px */
-h4{
-  font-size: 1.1428rem;
-  line-height: 1.1428rem;
-}
-/* 16px */
-h5{
-  font-size: 0.8571rem;
-  line-height: 0.8571rem;
+/* 14px */
+h6 {
+	font-size:0.75rem;
+	line-height: 0.75rem;
 }
 /* 12px */
-h6{
-  font-size: 0.7142rem;
-  line-height: 0.7142rem;
-}
-/* 10px */
-.inner{
-  padding: 0 16px;
-}
-header{
-  background-color: #00B2FF;
-  height: 56px;
-  line-height: 56px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  max-width: 768px;
-  margin: 0 auto;
-  z-index: 100;
-}
-header .header_menu {
-  line-height: 43px;
-}
-header h3, header h4{
-  line-height: 60px;
-}
-header .header_menu p{
-  width: 30px;
-}
-footer{
-  background-color: #00B2FF;
-  height: 60px;
-  line-height: 30px;
-  border-radius: 15px 15px 0 0;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  max-width: 768px;
-  margin: 0 auto;
-  z-index: 100;
-}
-footer img{
-  margin-bottom: 5px;
-  margin-top: 15px;
-  height: 20px;
-}
-footer .flex{
-  justify-content: space-around;
-}
-.flex{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-} 
-footer a:active{
-  background-color: #2196F3;
-}
-.col_flex{
-  flex-direction: column;
-}
-header .inner{
-  color: #fff;
-}
-footer div{
-  color: #fff;
-  text-align: center;
-}
-.comp_img{
-  margin-top: 80px;
-  margin-bottom: 60px;
-}
-article>.inner{
-  margin-top: 80px;
-  margin-bottom: 80px;
-}
-.actbtn{
-  position: relative;
-}
-.tracking_item .actbtn{
-  position: static;
-}
-.actbtn::before{
-  content: "";
-  border: 2px solid #ED7D31;
-  -webkit-transform-origin: 50% 48%;
-          transform-origin: 50% 48%;
-  -webkit-animation: drift 2000ms infinite linear;
-          animation: drift 2000ms infinite linear;
-  position: absolute;
-  top: -10px;
-  left: -10px;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-}
-@-webkit-keyframes drift {
-  from {
-    -webkit-transform: rotate(0deg) scale(0,0);
-            transform: rotate(0deg) scale(0,0);
-            opacity: 1;
-  }
-  to {
-    -webkit-transform: rotate(360deg) scale(2,2);
-            transform: rotate(360deg) scale(2,2);
-            opacity: 0;
-  }
-}
-
-@keyframes drift {
-  from {
-    -webkit-transform: rotate(0deg) scale(0,0);
-            transform: rotate(0deg) scale(0,0);
-            opacity: 1;
-  }
-  to {
-    -webkit-transform: rotate(360deg) scale(2,2);
-            transform: rotate(360deg) scale(2,2);
-            opacity: 0;
-  }
+article {
+	position:relative;
 }
