--- a/css/layout.css
+++ b/css/layout.css
@@ -5,6 +5,7 @@
     border-radius: 0 0 15px 15px;
     box-shadow: 0 8px 4px -4px #888;
     height: calc(100vh - 200px);
+    min-height: 400px;
 }
 #main_page .main_top>div{
     width: 100%;;
