--- a/css/common.css
+++ b/css/common.css
@@ -176,7 +176,7 @@ footer{
   height: 60px;
   line-height: 30px;
   border-radius: 15px 15px 0 0;
-  position: fixed;
+  position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
