--- a/css/layout.css
+++ b/css/layout.css
@@ -8,7 +8,8 @@
     min-height: 400px;
 }
 #main_page .main_top>div{
-    width: 100%;;
+    width: 100%;
+    height: 150px;
 }
 #main_page .user{
   color: #fff;
