--- a/css/common.css
+++ b/css/common.css
@@ -170,6 +170,18 @@ header h3, header h4{
 }
 header .header_menu p{
   width: 30px;
+  position: relative;
+}
+header .header_menu p:active::after, header .header_menu a:active::after{
+  content: "";
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  left: 0;
+  top: 12px;
+  background-color: #1a5a8f;
+  border-radius: 50%;
+  z-index: -1;
 }
 footer{
   background-color: #00B2FF;
@@ -244,11 +256,12 @@ article>.inner{
   -webkit-animation: drift 2000ms infinite linear;
           animation: drift 2000ms infinite linear;
   position: absolute;
-  top: -10px;
-  left: -10px;
+  top: 0;
+  left: 0;
   width: 10px;
   height: 10px;
   border-radius: 50%;
+  background-color: #ED7D31;
 }
 @-webkit-keyframes drift {
   from {
