--- a/css/layout.css
+++ b/css/layout.css
@@ -24,7 +24,7 @@
     width: 60px;
     height: 60px;
     border-radius: 50%;    
-    background-color: #888;
+    background-color: #fff;
 }
 #main_page .user_img img{
     display: block;
@@ -194,7 +194,7 @@
     top: 130px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: #ddd;
+    background-color: #fff;
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -208,7 +208,7 @@ a .user_pic{
     box-shadow: 0 4px 4px #888;
 }
 a .user_pic:active{
-    box-shadow: none;
+    box-shadow: inset 0 4px 4px #888;
 }
 .user_name{
     position: absolute;
